--- a/src/main/webapp/channel/channel_report_by_bill_class_by_user_by_payment_methord.xhtml
+++ b/src/main/webapp/channel/channel_report_by_bill_class_by_user_by_payment_methord.xhtml
@@ -33,6 +33,11 @@
                             <f:selectItem itemLabel="Select Payment Method" ></f:selectItem>
                             <f:selectItems value="#{enumController.paymentMethodsForChannel}"/>
                         </p:selectOneMenu>
+                        <p:outputLabel value="Channel Type" rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Cooperative'}" />
+                        <p:selectOneMenu id="cmbChanType" value="#{channelReportController.reportKeyWord.billType}" rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Cooperative'}" >
+                            <f:selectItem itemLabel="Please Select a Type"/>
+                            <f:selectItems value="#{enumController.channelType}" var="t" itemLabel="#{t.label}" itemValue="#{t}" />    
+                        </p:selectOneMenu>
                     </h:panelGrid>
 
                     <h:panelGrid columns="4">
