--- a/src/main/webapp/channel/report_cashier_vise_count_1.xhtml
+++ b/src/main/webapp/channel/report_cashier_vise_count_1.xhtml
@@ -58,6 +58,11 @@
                         <h:outputLabel value="To Date"/>
                         <p:calendar id="toDate" value="#{channelReportTempController.toDate}" navigator="true" pattern="dd MMMM yyyy HH:mm:ss">
                         </p:calendar>
+                        <p:outputLabel value="Channel Type" rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Cooperative'}" />
+                        <p:selectOneMenu id="cmbChanType" value="#{channelReportTempController.reportKeyWord.billType}" rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Cooperative'}" >
+                            <f:selectItem itemLabel="Please Select a Type"/>
+                            <f:selectItems value="#{enumController.channelType}" var="t" itemLabel="#{t.label}" itemValue="#{t}" />    
+                        </p:selectOneMenu>
                     </h:panelGrid>
                     <br/>
                     <p:dataTable id="tbl" value="#{channelReportTempController.channelSummeryDateRangeOrUserRows}" var="csh" rendered="#{!channelReportTempController.byDate}">
