--- a/src/main/webapp/channel/channel_report_by_bill_class_by_user.xhtml
+++ b/src/main/webapp/channel/channel_report_by_bill_class_by_user.xhtml
@@ -43,6 +43,11 @@
                             <p:column>#{vt.institutionCode}</p:column>
                             <p:column>#{vt.name}</p:column>
                         </p:autoComplete>
+                        <p:outputLabel value="Channel Type" rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Cooperative'}" />
+                        <p:selectOneMenu id="cmbChanType" value="#{channelReportController.reportKeyWord.billType}" rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Cooperative'}" >
+                            <f:selectItem itemLabel="Please Select a Type"/>
+                            <f:selectItems value="#{enumController.channelType}" var="t" itemLabel="#{t.label}" itemValue="#{t}" />    
+                        </p:selectOneMenu>
                     </h:panelGrid>
 
                     <h:panelGrid columns="4">
