--- a/src/main/webapp/hr/hr_report_staff_payroll_1.xhtml
+++ b/src/main/webapp/hr/hr_report_staff_payroll_1.xhtml
@@ -116,6 +116,9 @@
                         <th>Wor. Days Befo.</th>
                         <th>Wor. Days This</th>
                         <th>Wor. Days Adit.</th>
+                        <th>Anual</th>
+                        <th>Caual</th>
+                        <th>Medical</th>
                         <th>Mer Val</th>
                         <th>Merchan</th>
                         <th>Mer Cou</th>
@@ -196,6 +199,18 @@
                                 </h:outputText>                                   
                             </td>
                             <td style="text-align: right;" ><h:outputText value="#{scc.workingDaysAditional}" class="#{scc.workingDaysAditional gt 0 ? 'redText':''}"  >
+                                    <f:convertNumber pattern="#,##0.00" />
+                                </h:outputText>                                   
+                            </td>
+                            <td style="text-align: right;color: #843534;" ><h:outputText value="#{scc.transLeaveAnnual}" >
+                                    <f:convertNumber pattern="#,##0.00" />
+                                </h:outputText>                                   
+                            </td>
+                            <td style="text-align: right;color: #843534;" ><h:outputText value="#{scc.transLeaveCasual}" >
+                                    <f:convertNumber pattern="#,##0.00" />
+                                </h:outputText>                                   
+                            </td>
+                            <td style="text-align: right;color: #843534;" ><h:outputText value="#{scc.transLeaveMedical}" >
                                     <f:convertNumber pattern="#,##0.00" />
                                 </h:outputText>                                   
                             </td>
@@ -338,7 +353,7 @@
                                 <f:convertNumber pattern="#,##0.00" />
                             </h:outputText>
                         </td>
-                        <td colspan="6" ><h:outputLabel value=""/></td>
+                        <td colspan="9" ><h:outputLabel value=""/></td>
                         <td style="text-align: right;;">
                             <h:outputText value="#{salaryCycleController.mercAll}" >
                                 <f:convertNumber pattern="#,##0.00" />
